crates/lutum/tests/ui/impl_hooks_unknown_method.stderr
error[E0407]: method `missing_hook` is not a member of trait `AppHooks`
  --> tests/ui/impl_hooks_unknown_method.rs:13:5
   |
13 | /     async fn missing_hook(&self) -> String {
14 | |         "missing".into()
15 | |     }
   | |_____^ not a member of trait `AppHooks`

error[E0405]: cannot find trait `MissingHook` in this scope
  --> tests/ui/impl_hooks_unknown_method.rs:11:1
   |
11 | #[lutum::impl_hooks(AppHooksSet)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the attribute macro `lutum::impl_hooks` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0576]: cannot find method or associated constant `missing_hook` in trait `AppHooks`
  --> tests/ui/impl_hooks_unknown_method.rs:13:14
   |
 1 | #[lutum::hooks]
   | --------------- associated function `select_label` defined here
...
13 |     async fn missing_hook(&self) -> String {
   |              ^^^^^^^^^^^^
   |              |
   |              not found in `AppHooks`
   |              help: maybe you meant this associated function: `select_label`
